templates/remla23-team17_template.yaml
---
# Source: remla23-team17/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    component: app
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: remla23-team17/templates/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  type: ClusterIP
  selector:
    component: model-service
  ports:
    - port: 80
      name: http
      targetPort: 80
---
# Source: remla23-team17/templates/app-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: app
          image: ghcr.io/remla23-team17/app:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 80
---
# Source: remla23-team17/templates/model-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: model-service
  template:
    metadata:
      labels:
        component: model-service
    spec:
      containers:
        - name: model-service
          image: ghcr.io/remla23-team17/model-service:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 80
---
# Source: remla23-team17/templates/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 80
